Publish javadoc via GitHub Pages (#55)
* Publish javadoc via mvn site
* Add GitHub action to publish javadoc